--- a/playbooks/common/openshift-master/config.yml
+++ b/playbooks/common/openshift-master/config.yml
@@ -6,7 +6,7 @@
   roles:
   - openshift_master
   - { role: openshift_sdn_master, when: openshift.common.use_openshift_sdn | bool }
-  - fluentd_master
+  - { role: fluentd_master, when openshift.common.use_fluentd | bool }
   tasks:
   - name: Create group for deployment type
     group_by: key=oo_masters_deployment_type_{{ openshift.common.deployment_type }}
