--- a/playbooks/common/openshift-node/config.yml
+++ b/playbooks/common/openshift-node/config.yml
@@ -96,7 +96,7 @@
   roles:
   - openshift_node
   - { role: openshift_sdn_node, when: openshift.common.use_openshift_sdn | bool }
-  - fluentd_node
+  - { role: fluentd_node, when: openshift.common.use_fluentd | bool }
   tasks:
   - name: Create group for deployment type
     group_by: key=oo_nodes_deployment_type_{{ openshift.common.deployment_type }}
