--- a/roles/openshift_registry/tasks/main.yml
+++ b/roles/openshift_registry/tasks/main.yml
@@ -1,8 +1,8 @@
 ---
-- set_fact: _option_images="--images={{ openshift_registry_url|quote }}"
-  when: openshift_registry_url is defined
+- set_fact: _oreg_images="--images={{ oreg_url|quote }}"
+  when: oreg_url is defined
 
 - name: Deploy OpenShift Registry
-  command: openshift admin registry --create --credentials=/var/lib/openshift/openshift.local.certificates/openshift-registry/.kubeconfig {{ _option_images|default() }}
-  register: _openshift_registry__results
-  changed_when: "'service exists' not in _openshift_registry__results.stdout"
+  command: openshift admin registry --create --credentials=/var/lib/openshift/openshift.local.certificates/openshift-registry/.kubeconfig {{ _oreg_images|default() }}
+  register: _oreg_results
+  changed_when: "'service exists' not in _oreg_results.stdout"
