--- a/roles/openshift_router/tasks/main.yml
+++ b/roles/openshift_router/tasks/main.yml
@@ -1,8 +1,8 @@
 ---
-- set_fact: _option_images="--images={{ openshift_registry_url|quote }}"
-  when: openshift_registry_url is defined
+- set_fact: _ortr_images="--images={{ oreg_url|quote }}"
+  when: oreg_url is defined
 
 - name: Deploy OpenShift Router
-  command: openshift ex router --create --credentials=/var/lib/openshift/openshift.local.certificates/openshift-router/.kubeconfig {{ _option_images|default() }}
-  register: _openshift_router__results
-  changed_when: "'service exists' not in _openshift_router__results.stdout"
+  command: openshift ex router --create --credentials=/var/lib/openshift/openshift.local.certificates/openshift-router/.kubeconfig {{ _ortr_images|default() }}
+  register: _ortr_results
+  changed_when: "'service exists' not in _ortr_results.stdout"
