--- a/roles/openshift_deploy_router/tasks/main.yml
+++ b/roles/openshift_deploy_router/tasks/main.yml
@@ -4,25 +4,7 @@
       infranode_label: "{{ ocom_infra_node_label | default(openshift.common.infranode_label) }}"
 
 - name: Deploy router
-  shell: osadm router --create --credentials=/var/lib/openshift/openshift.local.certificates/openshift-router/.kubeconfig --images='registry.access.redhat.com/openshift3_beta/ose-${component}:${version}'
+  shell: "osadm router --create --credentials=/var/lib/openshift/openshift.local.certificates/openshift-router/.kubeconfig --images=\'registry.access.redhat.com/openshift3_beta/ose-${component}:${version}\'"
 
-- name: Get router deployment config
-  shell: osc get deploymentConfig/router -o json | sed -e '/"resourceVersion"/d'
-  register: output
-
-- name: Set router node region
-  set_fact:
-    router_fact: "{{ output.stdout | from_json | oo_set_resource_node(infranode_label) }}"
-
-- name: Write router deployment config to temp file
-  copy:
-    content: "{{ router_fact }}"
-    dest: /tmp/router.json
-
-- name: Import new router deployment config
-  shell: osc update deploymentConfig/router -f /tmp/router.json
-
-- name: Remove router deployment config temp file
-  file:
-    path: /tmp/router.json
-    state: absent
+- name: Set region for router
+  shell: "osc update deploymentConfig router --patch='{\"apiVersion\":\"v1beta1\",\"template\":{\"controllerTemplate\":{\"podTemplate\":{\"nodeSelector\":{\"region\":\"{{infranode_label}}\"}}}}}'"
