--- a/roles/openshift_deploy_router/tasks/main.yml
+++ b/roles/openshift_deploy_router/tasks/main.yml
@@ -4,7 +4,7 @@
       infranode_label: "{{ ocom_infra_node_label | default(openshift.common.infranode_label) }}"
 
 - name: Deploy router
-  shell: "osadm router --create --credentials=/var/lib/openshift/openshift.local.certificates/openshift-router/.kubeconfig --images=\'registry.access.redhat.com/openshift3_beta/ose-${component}:${version}\'"
+  shell: "osadm router --create --credentials=/var/lib/openshift/openshift.local.certificates/openshift-router/.kubeconfig --images=\'docker-registry.ops.rhcloud.com/openshift3_beta/ose-${component}:${version}\'"
 
 - name: Set region for router
   shell: "osc update deploymentConfig router --patch='{\"apiVersion\":\"v1beta1\",\"template\":{\"controllerTemplate\":{\"podTemplate\":{\"nodeSelector\":{\"region\":\"{{infranode_label}}\"}}}}}'"
