--- a/roles/openshift_images_common/defaults/main.yml
+++ b/roles/openshift_images_common/defaults/main.yml
@@ -1,3 +1,3 @@
 ---
-oic_docker_registry: "registry.access.redhat.com"
+oic_docker_registry: "docker-registry.ops.rhcloud.com"
 oic_image_version: "v0.4.3.2"
