--- a/roles/openshift_images_infra/defaults/main.yml
+++ b/roles/openshift_images_infra/defaults/main.yml
@@ -1,3 +1,3 @@
 ---
-oii_docker_registry: "registry.access.redhat.com"
+oii_docker_registry: "docker-registry.ops.rhcloud.com"
 oii_image_version: "v0.4.3.2"
