--- a/playbooks/libvirt/openshift-cluster/vars.yml
+++ b/playbooks/libvirt/openshift-cluster/vars.yml
@@ -24,9 +24,12 @@ deployment_vars:
     sudo: no
   enterprise:
     image:
-      url:
-      name:
-      sha256:
+      url:    "{{ lookup('oo_option', 'image_url') |
+                  default('https://access.cdn.redhat.com//content/origin/files/sha256/ff/ff8198653cfd9c39411fc57077451ac291b3a605d305e905932fd6d5b1890bf3/rhel-guest-image-7.1-20150224.0.x86_64.qcow2', True) }}"
+      name:   "{{ lookup('oo_option', 'image_name') |
+                  default('rhel-guest-image-7.1-20150224.0.x86_64.qcow2', True) }}"
+      sha256: "{{ lookup('oo_option', 'image_sha256') |
+                  default('ff8198653cfd9c39411fc57077451ac291b3a605d305e905932fd6d5b1890bf3', True) }}"
     ssh_user: openshift
     sudo: yes
 #  origin:
