--- a/playbooks/common/openshift-master/config.yml
+++ b/playbooks/common/openshift-master/config.yml
@@ -5,8 +5,10 @@
     openshift_sdn_master_url: https://{{ openshift.common.hostname }}:4001
   roles:
   - openshift_master
-  - { role: openshift_sdn_master, when: openshift.common.use_openshift_sdn | bool }
-  - { role: fluentd_master, when openshift.common.use_fluentd | bool }
+  - role: openshift_sdn_master
+    when: openshift.common.use_openshift_sdn | bool
+  - role: fluentd_master
+    when: openshift.common.use_fluentd | bool
   tasks:
   - name: Create group for deployment type
     group_by: key=oo_masters_deployment_type_{{ openshift.common.deployment_type }}
