--- a/playbooks/common/openshift-node/config.yml
+++ b/playbooks/common/openshift-node/config.yml
@@ -95,8 +95,10 @@
       dest: "{{ openshift_node_cert_dir }}"
   roles:
   - openshift_node
-  - { role: openshift_sdn_node, when: openshift.common.use_openshift_sdn | bool }
-  - { role: fluentd_node, when: openshift.common.use_fluentd | bool }
+  - role: openshift_sdn_node
+    when: openshift.common.use_openshift_sdn | bool
+  - role: fluentd_node
+    when: openshift.common.use_fluentd | bool
   tasks:
   - name: Create group for deployment type
     group_by: key=oo_nodes_deployment_type_{{ openshift.common.deployment_type }}
