--- a/playbooks/aws/openshift-cluster/tasks/launch_instances.yml
+++ b/playbooks/aws/openshift-cluster/tasks/launch_instances.yml
@@ -86,6 +86,7 @@
     wait: yes
     instance_tags:
       created-by: "{{ created_by }}"
+      environment: "{{ env }}"
       env: "{{ env }}"
       host-type: "{{ host_type }}"
       env-host-type: "{{ env_host_type }}"
