--- a/roles/kube_nfs_volumes/tasks/nfs.yml
+++ b/roles/kube_nfs_volumes/tasks/nfs.yml
@@ -1,6 +1,6 @@
 ---
 - name: Install NFS server on Fedora/Red Hat
-  yum: name=nfs-utils state=installed
+  yum: name=nfs-utils state=present
 
 - name: Start rpcbind on Fedora/Red Hat
   service: name=rpcbind state=started enabled=yes
