--- a/roles/openshift_node/tasks/main.yml
+++ b/roles/openshift_node/tasks/main.yml
@@ -22,11 +22,11 @@
       debug_level: "{{ openshift_node_debug_level | default(openshift.common.debug_level) }}"
 
 - name: Install OpenShift Node package
-  yum: pkg=openshift-node state=installed
+  yum: pkg=openshift-node state=present
   register: node_install_result
 
 - name: Install openshift-sdn-ovs
-  yum: pkg=openshift-sdn-ovs state=installed
+  yum: pkg=openshift-sdn-ovs state=present
   register: sdn_install_result
   when: openshift.common.use_openshift_sdn
 
