--- a/roles/openshift_router/tasks/main.yml
+++ b/roles/openshift_router/tasks/main.yml
@@ -3,6 +3,9 @@
   when: oreg_url is defined
 
 - name: Deploy OpenShift Router
-  command: openshift ex router --create --credentials=/var/lib/openshift/openshift.local.certificates/openshift-router/.kubeconfig {{ _ortr_images|default() }}
+  command: >
+    {{ openshift.common.admin_binary }} router
+    --create
+    --credentials={{ openshift_master_config_dir }}/openshift-router.kubeconfig {{ _ortr_images|default() }}
   register: _ortr_results
   changed_when: "'service exists' not in _ortr_results.stdout"
