--- a/playbooks/byo/config.yml
+++ b/playbooks/byo/config.yml
@@ -3,6 +3,10 @@
   include: openshift-master/config.yml
   when: groups.masters is defined and groups.masters
 
+- name: Run the openshift-etcd playbook
+  include: openshift-etcd/config.yml
+  when: groups.etcd is defined and groups.etcd
+
 - name: Run the openshift-node config playbook
   include: openshift-node/config.yml
   when: groups.nodes is defined and groups.nodes and groups.masters is defined and groups.masters
