--- a/roles/openshift_node/tasks/main.yml
+++ b/roles/openshift_node/tasks/main.yml
@@ -77,7 +77,7 @@
 - name: Check scheduleable state
   delegate_to: "{{ openshift_first_master }}"
   command: >
-    {{ openshift.common.client_binary }} get node {{ inventory_hostname }}
+    {{ openshift.common.client_binary }} get node {{ openshift.common.hostname }}
   register: ond_get_node
   until: ond_get_node.rc == 0
   retries: 10
@@ -86,11 +86,11 @@
 - name: Handle unscheduleable node
   delegate_to: "{{ openshift_first_master }}"
   command: >
-    {{ openshift.common.admin_binary }} manage-node {{ inventory_hostname }} --schedulable=false
+    {{ openshift.common.admin_binary }} manage-node {{ openshift.common.hostname }} --schedulable=false
   when: openshift_scheduleable is defined and openshift_scheduleable == False and "SchedulingDisabled" not in ond_get_node.stdout
 
 - name: Handle scheduleable node
   delegate_to: "{{ openshift_first_master }}"
   command: >
-    {{ openshift.common.admin_binary }} manage-node {{ inventory_hostname }} --schedulable=true
+    {{ openshift.common.admin_binary }} manage-node {{ openshift.common.hostname }} --schedulable=true
   when: (openshift_scheduleable is not defined or openshift_scheduleable == True) and "SchedulingDisabled" in ond_get_node.stdout
