Use copy instead of synchronize
* synchronize failed for a number of users

--- a/roles/openshift_examples/tasks/main.yml
+++ b/roles/openshift_examples/tasks/main.yml
@@ -1,6 +1,8 @@
 ---
 - name: Copy openshift examples
-  synchronize: src=examples dest=/usr/share/openshift
+  copy:
+    src: examples
+    dest: /usr/share/openshift
 
 # RHEL and Centos image streams are mutually exclusive
 - name: Import RHEL streams
